--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -166,7 +166,7 @@ td {
 
 <div id="area1">
   <div id="area3">
-  <div class="data_table_scr">
+  <div class="data_table_scr" id="list">
     <div id="chat-frame">
       <p class="chat-talk mytalk">
         <span class="talk-content">
@@ -177,13 +177,14 @@ td {
             照度：{{ i.illuminance }}</br>
           {% endfor %}
         </span>
-        <span class="talk-content" id="text">
-          わたぬき、水やる？
+        <span class="talk-content">
+        <!--<span class="talk-content" id="text">-->
+          わたぬき、<br>
+          本日の水やり時刻は<br>
+          11:30<br>
+          17:00<br>
+          です。
         </span>
-        <span class="talk-content" id="content"></span>
-      </p>
-      <p class="chat-talk">
-        <span class="talk-content" id="content1"></span>
       </p>
     </div>
   </div>
@@ -295,7 +296,9 @@ var apiUrl = 'https://api.apigw.smt.docomo.ne.jp/dialogue/v1/dialogue?APIKEY=';
 var apiKey = '4243356f65594f4435517944436f43345a42515767785831573876323459627a5938487839776c4d725338';
 var api = apiUrl + apiKey;
 
-var text = document.getElementById('text').textContent;
+//var text = document.getElementById('text').textContent;
+
+var i = 0;
 
 var apiJson = {
 
@@ -315,15 +318,25 @@ function callBot(){
     })
     .done(function(data){
         console.log(data.yomi); // ←いろんな雑話が返ってくる
-        content.textContent = data.yomi;
 
+        var target = document.getElementById("chat-frame");
+        var newTag = document.createElement("span");
+        newTag.innerHTML = '<p class="chat-talk mytalk"><span class="talk-content" id="contenta'+i+'"></span></p>';
+        target.appendChild(newTag);
+        eval("contenta"+i+".textContent = data.yomi");
+        i = i + 1;
+        $(function(){
+          $(".data_table_scr").scrollTop($("#list")[0].scrollHeight);
+        });
+        
         //ここから音声合成
         jQuery(function($) {
           xhr = new XMLHttpRequest();
           xhr.open('POST', 'https://api.apigw.smt.docomo.ne.jp/voiceText/v1/textToSpeech?APIKEY=4243356f65594f4435517944436f43345a42515767785831573876323459627a5938487839776c4d725338', true);
           xhr.responseType = 'arraybuffer'
           xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded")
-          var datax = "text="+text+data.yomi+"&speaker=hikari&emotion=happiness&emotion_level=2&format=ogg";
+          var datax = "text="+data.yomi+"&speaker=hikari&emotion=happiness&emotion_level=2&format=ogg";
+          //var datax = "text="+text+data.yomi+"&speaker=hikari&emotion=happiness&emotion_level=2&format=ogg";
           xhr.onload = function (e) {
             if( this.status == 200){
               view = new Uint8Array(this.response);
@@ -348,7 +361,7 @@ callBot();
 // 例：やっほー => やっほっほー
 // ※毎回同じとは限らない。結構いろんな回答が返ってきます
 
-setInterval(callBot, 50000);
+setInterval(callBot, 70000);
 
 </script>
 
@@ -359,10 +372,20 @@ var apiUrl = 'https://api.apigw.smt.docomo.ne.jp/dialogue/v1/dialogue?APIKEY=';
 var apiKey = '4243356f65594f4435517944436f43345a42515767785831573876323459627a5938487839776c4d725338';
 var api = apiUrl + apiKey;
 
+var i = 0;
+var j = 0;
+
 //テキストボックスの文字を取得する
 function tbox1(){
   var str1 = document.js.txtb.value;
-  content1.textContent = str1;
+  console.log(str1);
+
+  var target = document.getElementById("chat-frame");
+  var newTag = document.createElement("span");
+  newTag.innerHTML = '<p class="chat-talk"><span class="talk-content" id="content'+j+'"></span></p>';
+  target.appendChild(newTag);
+  eval("content"+j+".textContent = str1");
+  j = j + 1;
 
 var apiJson = {
 
@@ -382,7 +405,16 @@ function callBot(){
     })
     .done(function(data){
         console.log(data.yomi); // ←いろんな雑話が返ってくる
-        content.textContent = data.yomi;
+        
+        var target = document.getElementById("chat-frame");
+        var newTag = document.createElement("span");
+        newTag.innerHTML = '<p class="chat-talk mytalk"><span class="talk-content" id="contentb'+i+'"></span></p>';
+        target.appendChild(newTag);
+        eval("contentb"+i+".textContent = data.yomi");
+        i = i + 1;
+        $(function(){
+          $(".data_table_scr").scrollTop($("#list")[0].scrollHeight);
+        });
 
         //ここから音声合成
         jQuery(function($) {
@@ -421,7 +453,7 @@ callBot();
 
 //ここから音声認識
 var btn = document.getElementById('btn');
-var content1 = document.getElementById('content1');
+var contenta = document.getElementById('contenta');
 var speech = new webkitSpeechRecognition(); //音声認識APIの使用
 speech.lang = "ja"; //言語を日本語に設定
 btn.addEventListener( 'click' , function() {
@@ -431,7 +463,7 @@ btn.addEventListener( 'click' , function() {
 speech.addEventListener( 'result' , function( e ) {
     // ➁音声認識した結果を得る処理
     var text1 = e.results[0][0].transcript; // 認識された「言葉」を、変数「text」に格納
-    content1.textContent = text1; // 認識された「言葉(text)」を、表示用のdivタグに代入する
+    contenta.textContent = text1; // 認識された「言葉(text)」を、表示用のdivタグに代入する
 } );
 
 </script>
