--- a/AIoT/templates/base.html
+++ b/AIoT/templates/base.html
@@ -1,8 +1,9 @@
 {% load staticfiles %}
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}">
 <head>
 <meta http-equive="content-type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>{% block title %}datalist{% endblock %}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
