コードのミスを修正

--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -666,7 +666,7 @@ function Speech_Rec(){
   function getTextContents(text1) {
     if(i == 1) {
       if(text1.match(/水/)){
-        water_control()
+        water_control();
         console.log("water_control")
       }
       tbox2(text1);
